Case Study Complete

--- a/tripper.html
+++ b/tripper.html
@@ -5,7 +5,15 @@
     <meta charset="UTF-8">
     <title>Jeffrey De Leon | Multidisciplinary Designer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+
     <link href="css/index.css" rel="stylesheet" type="text/css">
+    <link href="css/case.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://use.typekit.net/bfp6urs.css">
     <link rel="stylesheet" href="https://use.typekit.net/bfp6urs.css">
     <link rel="stylesheet" href="https://use.typekit.net/bfp6urs.css">
@@ -38,6 +46,258 @@
         </ul>
     </nav>
 
+    <!-- Case Study Begins here -->
+
+    <div class="container">
+
+        <div class="row">
+
+            <div class="cardContainer col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                <div class="card">
+                    <div class="card-body text">
+                        <h2 class="caseHeader">Tripper travel app concept</h2>
+                        <h4 class="subHeader">Project Overview</h4>
+                        <p class="card-text">Students of the University of Toronto UX/UI bootcamp were challenged to
+                            develop an app for travellers to use after the COVID-19 pandemic.
+                            Tripper connects travelers who can share their thoughts, feelings and experiences about any
+                            destination. They can send a message to anyone, anytime, and anywhere to let others know
+                            what is happening now in world that is in constant change. Users can explore the world while
+                            staying informed with a trusted community content.</p>
+                        <h4>My Role</h4>
+                        <p class="card-text">This solo project was completed during a 4 week sprint. I individually
+                            performed user research, brainstorming, wireframing, prototyping and usability tests.</p>
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="cardContainer col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                <div class="card">
+                    <img src="images/Tripper - Mockup 1@2x.png" class="card-img-top" alt="...">
+                </div>
+            </div>
+
+        </div>
+
+        <hr>
+
+        <div class="row">
+            <div class="cardContainer col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                <h4 class="subHeader">Design Process</h4>
+                <img class="card-img-top" src="images/Design Process.png" alt="tripper design process">
+            </div>
+        </div>
+
+        <hr>
+
+        <div class="row">
+            <div class="cardContainer col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                <h4 class="subHeader">User Research</h4>
+                <p class="card-text">The first step of the process was understanding what travellers pain points are. To
+                    gather relevant information, I sent a Google Forms survey to fellow classmates and friends to find
+                    people who have <strong>travelled at least once</strong> during the pandemic, either domestically or
+                    internationally.
+                    5 participants were selected from that survey. I asked each participant <strong> 10
+                        questions</strong> about their experiences to
+                    get a better perspective about the target audience:</p>
+                <ol class="questions">
+                    <li>In your survey you said you have traveled during the pandemic. Where did you go and how was the
+                        trip?</li>
+                    <li>What were you worried about the most when organizing the trip?</li>
+                    <li>What did you use to organize your trip? (booking, itinerary)</li>
+                    <li>Why did you choose (chosen tool)?</li>
+                    <li>Did your booking tools give you any COVID based information about your destination?</li>
+                    <li>How were you able to access your trip information upon traveling? (i.e. checking flight times
+                        before departing/the day of departing)</li>
+                    <li>How did you feel using (said tool)?</li>
+                    <li>How did you check for travel restrictions and requirements for entry for the location you
+                        visited?</li>
+                    <li>Why did you choose (said tool)?</li>
+                    <li>How did you feel using (said tool)?</li>
+                    <li>What could have made your trip organizing experience better/easier?</li>
+                    <li>How do you feel about traveling once the pandemic settles?</li>
+                </ol>
+                <p class="card-text">After interviews, I sorted key findings and common responses into an affinity
+                    diagram.</p>
+                <img src="images/Interview Notes.jpg" alt="Interview Notes" class="card-img-top">
+                <img src="images/Affinity Diagram.jpg" alt="Affinity Diagram" class="card-img-top">
+
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="cardContainer col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                <h4>Persona</h4>
+                <p class="card-text">A persona was developed to represent a potential post-pandemic traveller, based on
+                    my interview findings. <strong> Julia Jenkins </strong> addresses pain points, personality, and
+                    goals that Tripper
+                    could solve.</p>
+                <img src="images/User-Persona.jpg" alt="User Persona" class="card-img-top">
+            </div>
+        </div>
+
+        <hr>
+
+        <div class="row">
+            <div class="cardContainer col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                <h4>How might we communicate with travellers like Julia to relieve her anxieties so that she stays
+                    informed and feel safe on her next trip?</h4>
+                <p class="card-text">Based on our user research, data suggests travelers will use social media and
+                    word-of-mouth information to know more about their next travel destinations. Using government
+                    websites or checking for news sources can sometimes be confusing to understand.</p>
+                <p class="card-text">I brainstormed POV statements in the form of I Like, I Wish, What if? to get
+                    perspective on what Julia might need to make her travel experience safe. Dot voting was conducted
+                    with classmates to see what they would want for the app.</p>
+            </div>
+            <img class="card-img-top" src="images/Brainstorming.jpg" alt="Brainstorming Ideas with Dot Voting Results">
+        </div>
+
+        <div class="row">
+            <div class="cardContainer col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                <h4>Feature Matrix chart</h4>
+                <p class="card-text">After voting, I placed each statement on a feature matrix to determine what can
+                    be implemented that would make impact for developing the app</p>
+                <img class="card-img-top" src="images/Feature Prioritization Matrix.jpg"
+                    alt="Feature Matrix with brainstorming ideas">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="cardContainer col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                <h4>User Journey Map</h4>
+                <p class="card-text">I continued to understand <strong>Julia's perspective</strong> and the
+                    experience she might have
+                    had while travelling. I developed a journey map based on the persona, to determine where she
+                    might be struggling. I started the journey map during the planning stages and ended just before
+                    the departure of her trip.</p>
+                <img class="card-img-top" src="images/User Journey.png" alt="User Journey Map">
+            </div>
+        </div>
+
+        <hr>
+
+        <div class="row">
+            <div class="cardContainer col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                <h4>Competitor Analysis</h4>
+                <p>To get a better insight into the app market for social media and travel, I focused on analyzing
+                    <strong> Twitter, Expedia, and TripAdvisor.</strong> I've identified these apps as potential
+                    competitors because
+                    they have similar features that Tripper would have.
+                </p>
+
+                <p>Through my research, I have found there was a lack of COVID-19 support on Expedia and TripAdvisor
+                    for hotels, flights, and travel destinations. Users would have to do their own research on
+                    safety guidelines. Twitter has issues with unverified sources spreading potentially false
+                    information. Constant ads made the browsing experience annoying.</p>
+                <img class="card-img-top" src="images/Competitor-Analysis.jpg" alt="Competitor Analysis">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="cardContainer col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                <h4>User Flows</h4>
+                <p>I created flows for the onboarding process and 3 key features. The first feature is searching for a
+                    channel for hotels and sending a message in the chat. The second is for creating a new channel. The
+                    third feature is for writing a review.</p>
+                <img class="card-img-top" src="images/User-Flows-onboarding.jpg">
+                <img class="card-img-top" src="images/User-Flows-Feature-1.jpg">
+                <img class="card-img-top" src="images/User-Flows-Feature-2.jpg">
+                <img class="card-img-top" src="images/User-Flows-Feature-3.jpg">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="cardContainer col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                <h4>Sketches</h4>
+                <p>The user flows were then converted into sketches to determine the layout and hierarchy of elements. I
+                    drew sketches for each stage of all user flows to show how each screen will be displayed.</p>
+                <img class="card-img-top" src="images/Sketches.jpg">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="cardContainer col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                <h4>Digital wireframes</h4>
+                <p>Once the sketches were complete, I moved on to designing digital wireframes. I also prototyped each
+                    screen using Adobe XD.</p>
+                <img class="card-img-top" src="images/Digital-Wireframes.jpg">
+            </div>
+        </div>
+
+        <hr>
+
+        <div class="row">
+            <div class="cardContainer col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                <h4>Remote usability Tests</h4>
+                <p>I conducted remote usability tests online with <strong>4 participants over Zoom calls</strong>. I
+                    asked each
+                    participant to also screen record their phone so I can see how they interact with each screen. The
+                    Zoom calls were to record their physical reactions. The test contained 4 unique tasks the user had
+                    to complete.</p>
+                <ul class="usabilityTest">
+                    <li>Task 1: Onboarding and account creation</li>
+                    <li>Task 2: Send a message to a group channel</li>
+                    <li>Task 3: Write a review</li>
+                    <li>Task 4: Create a new community channel</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="cardContainer col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                <h4>Test Results</h4>
+                <img class="card-img-top" src="images/Usability Testing - Affinity Diagram.jpg">
+                <h4>Iterations</h4>
+                <p>Due to the short time frame of the project, I focused on emphasizing how key features worked for the
+                    app in the onboarding process.</p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="cardContainer col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                <h4>Prototype</h4>
+                <iframe class="prototype" width="375" height="667"
+                    src="https://xd.adobe.com/embed/6f8c452e-41dc-4c73-8ae8-cde423d39131-3adf/" frameborder="0"
+                    allowfullscreen></iframe>
+            </div>
+        </div>
+
+        <hr>
+
+        <div class="row">
+            <div class="cardContainer col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                <h4>Next Steps</h4>
+                <ul class="nextSteps">
+                    <li>Improve the UI by creating a style guide to determine colour, typography rules and grid
+                        alignment</li>
+                    <li>Develop the profile section of the app. Users would be able to customize their own profiles and
+                        add itinerary plans to share with others online. Users can also view all the channels they
+                        follow and see every review they have written.
+                    </li>
+                    <li>Determine how channel ownership is handled. Implement multiple owners of a single channel.
+                        Establishments such as restaurants can also create a channel for their business</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="cardContainer col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                <h4>Learnings</h4>
+                <p class="card-text">This project has given me a first glimpse at the process of designing a new app
+                    from research to design. As someone who hasn't travelled in a long time, it was difficult to
+                    determine what objectives I wanted to focus on. After conducting interviews, I was able to empathize
+                    with the pain and frustrations people have had while travelling during these uncertain times. People
+                    want social interaction because it makes them feel comfortable knowing others are experiencing
+                    similar issues. News sources and governments may not have that personal relationship with the public
+                    compared to friends and family.</p>
+            </div>
+        </div>
+
+        <hr>
+    </div>
+
+
+
     <footer>
         <h4>Let's Keep In Touch</h4>
         <ul>
@@ -60,6 +320,19 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/index.js"></script>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <!-- THE BELOW SCRIPT TAGS ARE REQUIRED FOR CERTAIN COMPONENTS IN BOOTSTRAP -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 
 
 </body>
